完善mysql代理代码

--- a/mysql_proxy/nginx/conf/nginx.conf
+++ b/mysql_proxy/nginx/conf/nginx.conf
@@ -43,7 +43,7 @@ stream {
     }
     
     server {
-        listen 9400-9402;
+        listen 9400-9401;
         proxy_timeout 1h;
         content_by_lua_block {
             local mysql_proxy = require "mysql_proxy_app"
@@ -75,7 +75,7 @@ http {
         listen 3901;
         server_name localhost;
 
-        location /getdbAddress {
+        location /message/api/getSipTunnel {
             content_by_lua_block {
                 ngx.req.read_body()
                 local body = ngx.req.get_body_data()
@@ -83,8 +83,7 @@ http {
                 local data = cjson.decode(body)
                 local jsonarr = {}
                 table.insert(jsonarr, {vpPort="9400",targetIp="192.168.104.100",targetPort="33060",targetType="11"})
-                table.insert(jsonarr, {vpPort="9401",targetIp="192.168.100.20",targetPort="5432",targetType="11"})
-                table.insert(jsonarr, {vpPort="9402",targetIp="192.168.100.21",targetPort="5432",targetType="11"})
+                table.insert(jsonarr, {vpPort="9401",targetIp="192.168.100.100",targetPort="33061",targetType="11"})
                 local json_str = cjson.encode(jsonarr)
                 ngx.print(json_str)
             }
